# training_CLanguage_farmer_1987

./: CMakeLists.txt  data.txt  readMe.md
Inc/chapter_3/: date1.h
Inc/chapter_4/: binary.h  bubble.h  getline.h  quadratic.h  salary.h
Inc/chapter_6/: reverse.h
Src/: main.c
Src/chapter_1/: circle.c  circumference.c  hello.c
Src/chapter_2/: averageSalary.c  blanks.c  ctof1.c  hailstone.c  max1.c  nibble.c  sizeof.c  wordlength.c
Src/chapter_3/: itoh.c  normal.c  random.c  salary.c
Src/chapter_4/: assignment_4_2.c  assignment_4_3.c  binary.c  bubble.c  calculator1.c  do.c  for.c  getline.c  perfect.c  quadratic1.c  salary.c  uniq.c  while.c  whitespace.c
Src/chapter_5/: ctof2.c  echo.c  factorial.c  hanoi.c  reverse2.c  unendliche.c
Src/chapter_6/: reverse.c
